@@ -1,3 +1,8 @@
+2019-05-31 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage--root-directory): Adjust documentation
+	and handling of `user-emacs-directory'.
+
 2019-05-05 Sun  Jari Aalto  <jari.aalto@cante.net>
 
 	* ALL: Upate Copyright years.
